[package]
name = "pgwhy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.duckdb]
version = "0.8.1"
features = ["bundled"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"